# delivery-time-prediction

./: README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  setup.py  temprary.py
.dvc/: config
api_service/: main.py  preprocessing.py  query_point.csv  temp.py
api_service/static/: styles.css
api_service/templates/: index.html
docs/: conf.py
models/: .gitignore
notebooks/: HT_over_top_performers.ipynb  Untitled.ipynb  baseline_experiment.ipynb  best_params.json  data_cleaning.ipynb  model_selection_after_imputation.ipynb  model_selection_after_imputation_ANN.ipynb  model_selection_without_missing_values.ipynb  model_selection_without_missing_values_ANN.ipynb  stacking_regressor.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
reports/: best_params.json  scaler.pkl
src/data/: data_ingestion.py  data_preprocessing.py
src/features/: feature_engineering.py  utility.py
src/model/: model_building.py  model_evaluation.py  model_registry.py
