[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "delivery-time-prediction"
version = "0.1.0"
description = "This project is about predicting the delivery time."
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "api_service"]
